# pictosend-rs

./: Cargo.toml  README.md
assets/: drawFrag.glsl  frag.glsl  scrollVert.glsl
psrs_server/: Cargo.toml  history
psrs_server/src/: main.rs
src/: fixtures.rs  glsetup.rs  history.rs  main.rs  network.rs  penstate.rs  textureface.rs  typer.rs  winflash.rs
