workspace = { members = ["psrs_server"] }
[package]
name = "pictosendrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
gl = "0.14.0"
glfw = "0.55.0"
image = "0.25.0"
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
winapi = { version = "0.3.9", features = ["winuser", "windef"] }
